[package]
name = "riptables"
version = "0.1.0"
authors = ["fewensa <fewensa@protonmail.com>"]
description = "Rust iptables"
keywords = ["iptables"]
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
edition = "2018"

[dependencies]
text-reader = "0.1"
regex = "0.2"
nix = "0.7.0"
rstring-builder = "0.1"
lazy_static = "0.2.8"

