[package]
name = "riptables"
version = "0.1.0"
authors = ["fewensa <fewensa@protonmail.com>"]
description = "Rust iptables"
keywords = ["iptables"]
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
edition = "2018"

[dependencies]
text-reader = "0.1"
rstring-builder = "0.1.3"
nix = "0.7.0"

