[package]
name = "riptables"
version = "0.1.0"
authors = ["fewensa <fewensa@protonmail.com>"]
description = "Rust iptables"
homepage = "https://github.com/fewensa/riptables"
repository = "https://github.com/fewensa/riptables"
license = "MIT"
keywords = ["iptables", "netfilter", "bindings"]
categories = ["api-bindings"]
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
readme = "README.md"
edition = "2018"

[dependencies]
text-reader = "0.1"
rstring-builder = "0.1.3"
nix = "0.7.0"

[lib]
doctest = false

